--- a/pom.xml
+++ b/pom.xml
@@ -4,32 +4,27 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.jboss.examples</groupId>
-	<artifactId>fis-hello</artifactId>
+	<groupId>dk.miracle.rest</groupId>
+	<artifactId>rest-proxy</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>Fabric8 :: Quickstarts :: CDI :: Camel</name>
+	<name>Rest Proxy :: Camel</name>
 	<description>Camel route using CDI in a standalone Java Container</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<!-- the version of the BOM, defining all the dependency versions -->
 		<fuse.version>6.2.1.redhat-084</fuse.version>
 		<fabric8.version>2.2.0.redhat-079</fabric8.version>
-		<docker.maven.plugin.version>0.13.6</docker.maven.plugin.version>
+		<docker.maven.plugin.version>0.20.1</docker.maven.plugin.version>
 
 		<!-- Docker & Fabric8 Configs -->
-		<docker.from>jboss-fuse-6/fis-java-openshift:1.0</docker.from>
-		<fabric8.dockerUser>fabric8/</fabric8.dockerUser>
+		<docker.from>jboss-fuse-6/fis-java-openshift:2.0</docker.from>
+		<fabric8.dockerUser>myproject/</fabric8.dockerUser>
 		<docker.image>${fabric8.dockerUser}${project.artifactId}:${project.version}</docker.image>
-		<docker.port.container.jolokia>8778</docker.port.container.jolokia>
-
-		<fabric8.label.component>${project.artifactId}</fabric8.label.component>
-		<fabric8.label.container>java</fabric8.label.container>
-		<fabric8.label.group>quickstarts</fabric8.label.group>
-		<fabric8.iconRef>camel</fabric8.iconRef>
 	</properties>
 
 	<dependencyManagement>
@@ -66,7 +61,7 @@
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-jetty8</artifactId>
 		</dependency>
-		
+
 		<!-- cdi api -->
 		<dependency>
 			<groupId>javax.enterprise</groupId>
@@ -94,35 +89,19 @@
 			<artifactId>slf4j-log4j12</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 		</dependency>
-		
+
 
 		<!-- testing -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.arquillian.junit</groupId>
-			<artifactId>arquillian-junit-container</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.fabric8</groupId>
-			<artifactId>fabric8-arquillian</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.shrinkwrap.resolver</groupId>
-			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.codehaus.plexus</groupId>
-			<artifactId>plexus-utils</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -140,6 +119,21 @@
 					<source>1.7</source>
 					<target>1.7</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.19.1</version>
+				<executions>
+					<execution>
+						<id>run-tests</id>
+						<phase>integration-test</phase>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -167,6 +161,57 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>io.fabric8</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>${docker.maven.plugin.version}</version>
+				<executions>
+					<execution>
+						<id>start</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>build</goal>
+							<goal>start</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>stop</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<images>
+						<image>
+							<name>${docker.image}</name>
+							<build>
+								<from>${docker.from}</from>
+								<assembly>
+									<basedir>/deployments</basedir>
+									<descriptorRef>hawt-app</descriptorRef>
+								</assembly>
+								<env>
+									<JAVA_LIB_DIR>/deployments/lib</JAVA_LIB_DIR>
+									<JAVA_MAIN_CLASS>org.apache.camel.cdi.Main</JAVA_MAIN_CLASS>
+								</env>
+							</build>
+							<run>
+								<ports>
+									<port>8080:8080</port>
+									<port>8787:8787</port>
+									<port>5005:5005</port>
+								</ports>
+								<wait>
+									<time>500000</time>
+									<log>Apache Camel 2.15.1.redhat-621084 starting</log>
+								</wait>
+							</run>
+						</image>
+					</images>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
