--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,3 +45,16 @@ steps:
     artifactName: drop
     publishLocation: 'Container'
   condition: succeeded()
+
+- task: Maven@3
+  displayName: 'deploy'
+  inputs:
+    mavenPomFile: 'pom.xml'
+    mavenOptions: '-Xmx3072m'
+    javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '1.11'
+    jdkArchitectureOption: 'x64'
+    publishJUnitResults: false
+    testResultsFiles: '**/TEST-*.xml'
+    goals: 'deploy'
+  condition: succeeded()
