--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,20 @@ pool:
   demands:
     - maven
 
+variables:
+  MAVEN_CACHE_FOLDER: $(Pipeline.Workspace)/.m2/repository
+  MAVEN_OPTS: '-Dmaven.repo.local=$(MAVEN_CACHE_FOLDER)'
+
 steps:
+- task: Cache@2
+  displayName: Cache Maven local repo
+  inputs:
+    key: 'maven | "$(Agent.OS)" | **/pom.xml'
+    restoreKeys: |
+       maven | "$(Agent.OS)"
+       maven
+    path: $(MAVEN_CACHE_FOLDER)
+  
 - task: Maven@3
   displayName: 'build, test, code coverage'
   inputs:
